Fixed arrow alignment.

--- a/resources/assets/sass/global/post-attachments.scss
+++ b/resources/assets/sass/global/post-attachments.scss
@@ -49,7 +49,7 @@ ul.post-attachments {
     }
         div.action-bar-attachments {
             position: absolute;
-            left: -0.2em;
+            left: 0;
             z-index: 4;
 
             .post-action-label {
